--- a/src/release/langs/lang.de.json
+++ b/src/release/langs/lang.de.json
@@ -1,11 +1,11 @@
 {
-  "running":"Es läuft die Version plug&#179 %1",
-  "commandsHelp":"Gib '\/commands' ein, um alle Chat Befehle zu sehen.",
+  "running":"Es läuft Version plug&#179; %1",
+  "commandsHelp":"Gib '/commands' ein, um alle Chatbefehle zu sehen.",
   "autorespond":{
-    "default":"Bin mal weg.",
-    "disable":"Schalte die AFK Autoantwort ab um zu Chatten",
+    "default":"Bin mal AFK.",
+    "disable":"Deaktiviere die AFK-Autoantwort, um zu Chatten",
     "nextIn":"Die nächste AFK Autoantwort wird von %1 gesendet werden",
-    "next":"AFK Autoantwort bei nächster Erwähnung",
+    "next":"AFK-Autoantwort bei nächster Erwähnung",
     "commandDisable":"%1 AFK Nachricht deaktiviert",
     "commandNotEnabled":"%1 AFK Nachricht war nicht aktiviert"
   },
@@ -15,7 +15,7 @@
   },
   "fullscreen":{
     "shrink":"Verkleinern",
-    "enlarge":"Vergrößern"
+    "enlarge":"Vollbild"
   },
   "commands":{
     "header":"plug&#179; Befehle",
@@ -30,41 +30,41 @@
       "number":"Nummer"
     },
     "descriptions":{
-      "join":"Tritt der DJ Warteliste bei",
-      "leave":"Verlässt den DJ-Booth\/die Warteliste",
-      "whoami":"Siehe deine eigenen Informationen ein",
-      "mute":"Stelle die Lautstärke auf 0",
-      "automute":"Schalte den zurzeit spielenden Song für jetzt und die Zukunft stumm",
-      "unmute":"Stelle die Lautstärke auf den vorherigen Wert",
-      "nextsong":"Zeigt den nächsten Song in der Playlist und kontrolliert ob er schon im Verlauf vorhanden ist",
+      "join":"Tritt der DJ-Warteliste bei",
+      "leave":"Verlässt die DJ-Warteliste",
+      "whoami":"Zeigt deine eigenen Informationen an",
+      "mute":"Setzt die Lautstärke auf 0",
+      "automute":"Schaltet den aktuellen Song stumm, sobald er gespielt wird",
+      "unmute":"Stellt die Lautstärke auf den vorherigen Wert",
+      "nextsong":"Zeigt an, ob der nächste Song in der Playlist und im Verlauf ist",
       "refresh":"Lädt das Video neu",
-      "alertson":"Spiele einen Ton, sobald bestimmte Worte im Chat geschrieben werden",
-      "alertsoff":"Kein Signalton bei einem im Chat erwähntem Wort  ",
-      "grab":"Füge den aktuellen Song zu deiner ausgewählten Playlist hinzu",
-      "badges":"Benutzerabzeichen im chat ein-\/ausblenden",
+      "alertson":"Spielt einen Ton ab, wenn bestimmte Wörter im Chat geschrieben werden",
+      "alertsoff":"Deaktiviert das Abspielen eines Tons, wenn bestimmte Wörter im Chat geschrieben werden",
+      "grab":"Fügt den aktuellen Song zur aktuell ausgewählten Playlist hinzu",
+      "badges":"Blendet Abzeichen im Chat ein bzw. aus",
       "getpos":"Zeigt deine Position in der Warteliste an",
       "version":"Zeigt die Versionsnummer an",
       "commands":"Zeigt diese Liste",
-      "link":"Postet den Link zur plugCubed Website in den Chat",
-      "whois":"Zeigt generelle Informationen zum Nutzer an",
-      "skip":"Überspringe den aktuellen Song",
+      "link":"Postet den Link zur plugCubed-Website in den Chat",
+      "whois":"Zeigt allgemeine Informationen des angegebenen Nutzers an",
+      "skip":"Überspringt den aktuellen Song",
       "ban":"Kickt den ausgewählten Benutzer",
-      "lockskip":"Sperrt die DJ Warteliste, überspringt und entsperrt danach",
-      "lock":"Sperrt die DJ Warteliste",
-      "unlock":"Entsperrt die DJ Warteliste",
-      "add":"Fügt den markierten Benutzer zur DJ Warteliste hinzu",
-      "remove":"Entfernt den markierten Benutzer von der DJ Warteliste",
-      "whois all":"Zeigt die Benutzer-ID und Benutzernamen von allen Benutzern im Raum an",
+      "lockskip":"Sperrt die Warteliste, überspringt den Song und entsperrt sie anschließend wieder",
+      "lock":"Sperrt die Warteliste",
+      "unlock":"Entsperrt die Warteliste",
+      "add":"Fügt den ausgewählten Benutzer zur Warteliste hinzu",
+      "remove":"Entfernt den ausgewählten Benutzer von der Warteliste",
+      "whois all":"Zeigt die ID und Benutzernamen aller Benutzer im Raum an",
       "banall":"Bannt alle Benutzer im Raum",
-      "status":"Status der Plug Server anzeigen",
+      "status":"Zeigt den Status der plug.dj-Server",
       "unload":"Schließt plug&#179;"
     },
     "responses":{
-      "alertson":"Spiele einen Signalton bei folgenden Wörtern: %1",
-      "alertsoff":"Spiele keinen Signalton bei spezifischen Wörten mehr",
-      "badgeon":"Abzeichen wurden eingeschaltet",
-      "badgeoff":"Abzeichen wurden ausgeschaltet",
-      "nextsong":"Dein nächstes Lied ist %1 von %2",
+      "alertson":"Ein Ton wird bei folgenden Wörtern abgespielt: %1",
+      "alertsoff":"Es wird kein Ton mehr bei ausgewählten Wörtern abgespielt",
+      "badgeon":"Abzeichen werden angezeigt",
+      "badgeoff":"Abzeichen werden nicht mehr angezeigt",
+      "nextsong":"Dein nächster ausgewählter Song ist %1 von %2",
       "isHistory":"Achtung: Dieser Song ist noch im Verlauf (%1 von %2)",
       "automute":{
         "automuted":"%1 automatisch stumm geschaltet.",
@@ -78,138 +78,138 @@
     }
   },
   "eta":{
-    "boothAvailable":"Wenn du jetzt in der Warteliste beitrittst, würdest du gleich DJen!",
-    "alreadyDJ":"Du stehst schon am Mischpult!",
-    "waitListTime":"Du bist in der Warteliste %1 von %2, du wirst in etwa %3 DJen!",
-    "joinTime":"Wenn du der Warteliste jetzt beitrittst. würdest du in ungefähr %1 DJen!"
+    "boothAvailable":"Wenn du jetzt der Warteliste beitrittst, würdest du sofort am DJ-Pult stehen!",
+    "alreadyDJ":"Du stehst schon bereits am DJ-Pult!",
+    "waitListTime":"Du bist in der Warteliste %1 von %2, du wirst in etwa %3 am DJ-Pult stehen!",
+    "joinTime":"Wenn du jetzt der Warteliste beitrittst. würdest du in ungefähr %1 am DJ-Pult stehen!"
   },
   "notify":{
-    "header":"Chat Benachrichtigungen",
+    "header":"Chat-Benachrichtigungen",
     "join":"Nutzer betritt den Raum",
     "leave":"Nutzer verlässt den Raum",
-    "grab":"User Grab",
-    "meh":"User Mehs",
-    "stats":"Song-Statistik",
+    "grab":"Benutzer schnappt sich lied",
+    "meh":"Benutzer Mehs",
+    "stats":"Song-Statistiken",
     "updates":"Song-Updates",
     "history":"Songs im Verlauf",
-    "songUnavailable":"Lied nicht verfügbar",
-    "boothAlert":"Pult-Alarm (%1 \/ 50)",
-    "songLength":"Song Länge (%1 min)",
+    "songUnavailable":"Song nicht verfügbar",
+    "boothAlert":"Pult-Alarm (%1 / 50)",
+    "songLength":"Song-Länge (%1 min)",
     "message":{
       "boothAlertNext":"Du bist als Nächstes an der Reihe!",
       "boothAlertPos":"Du bist jetzt auf Position %1 in der Warteliste",
-      "grab":"grabbed %1 - %2",
-      "stats":"Statistiken: %1 woots -- %2 mehs -- %3 grabs",
-      "updates":"Jetzt läuft: %1 von %2<br\/>Gespielt von: %3",
-      "meh":"meh'd this track",
+      "grab":"schnappte %1 - %2",
+      "stats":"Statistiken: %1 Woots -- %2 Mehs -- %3 Grabs",
+      "updates":"Jetzt läuft: %1 von %2<br/>Gespielt von: %3",
+      "meh":"meh'd dieses lied",
       "join":"ist dem Raum beigetreten",
       "leave":"hat den Raum verlassen",
       "history":"Song ist im Verlauf (%1 von %2)",
-      "historySkipped":"Song ist im Verlauf (%1 von %2), aber wurde beim letzten Mal übersprungen",
+      "historySkipped":"Song ist im Verlauf (%1 von %2), wurde aber beim letzten Mal übersprungen",
       "songLength":"Song ist länger als %1 Minuten ",
-      "songPrivate":"Dieses Lied ist Privat",
-      "songNotFound":"Lied konnte nicht gefunden werden",
-      "songEmbed":"Dieses Lied hat das Einbetten deaktiviert",
-      "songStreamable":"Dieses Lied unterstützt Streaming nicht"
+      "songPrivate":"Dieser Song ist Privat",
+      "songNotFound":"Dieser Song konnte nicht gefunden werden",
+      "songEmbed":"Dieser Song kann nicht eingebettet werden",
+      "songStreamable":"Dieser Song unterstützt Streaming nicht"
     }
   },
   "info":{
-    "header":"Nutzer Informationen",
-    "name":"Benutzername",
-    "title":"Titel",
+    "header":"Nutzerinformationen",
+    "name":"Name:",
+    "title":"Titel:",
     "specialTitles":{
-      "developer":"plug&#179; Entwickler",
+      "developer":"plug&#179;-Entwickler",
       "sponsor":"plug&#179;-Sponsor",
-      "ambassador":"plug&#179;-Botschafter",
+      "ambassador":"plug&#179;-Ambassador",
       "donatorDiamond":"plug&#179;-Diamant-Spender",
-      "donatorPlatinum":"plug&#179;Platinum-Spender",
-      "donatorGold":"plug&#179; Gold Spender",
-      "donatorSilver":"plug&#179;Silber-Spender\n",
-      "donatorBronze":"plug&#179;Bronze Spender",
-      "special":"plug&#179; Spezial Supporter"
+      "donatorPlatinum":"plug&#179;-Platin-Spender",
+      "donatorGold":"plug&#179;-Gold-Spender",
+      "donatorSilver":"plug&#179;-Silber-Spender",
+      "donatorBronze":"plug&#179;-Bronze-Spender",
+      "special":"plug&#179;-Besonderer-Supporter - %1"
     },
-    "id":"ID",
-    "rank":"Rang",
-    "joined":"Zeit beigetreten",
-    "status":"Status",
-    "vote":"Abstimmen",
-    "position":"Position",
-    "points":"Punkte",
-    "wootCount":"Woot Anzahl",
-    "mehCount":"Meh Anzahl",
-    "ratio":"Woot\/Meh Verhältnis",
-    "djing":"DJen",
+    "id":"ID:",
+    "rank":"Rang:",
+    "joined":"Raum betreten um:",
+    "status":"Status:",
+    "vote":"Stimme:",
+    "position":"Position:",
+    "points":"Punkte:",
+    "wootCount":"Woot-Stimmen:",
+    "mehCount":"Meh-Stimmen:",
+    "ratio":"Woot/Meh-Verhältnis:",
+    "djing":"Aktueller DJ",
     "notInList":"Nicht in der Warteliste",
-    "inWaitlist":"%1\/%2 in der Wateliste",
+    "inWaitlist":"%1/%2 in der Wateliste",
     "userDjing":"%1 spielt gerade",
     "userNextDJ":"%1 spielt als nächstes",
-    "disconnects":"Unterbrechungen",
-    "lastDisconnect":"Letzte Unterbrechung",
-    "lastPosition":"Position",
-    "time":"Zeit",
-    "lastMessage":"Letzte Nachricht"
+    "disconnects":"Verbindungsabbrüche:",
+    "lastDisconnect":"Letzter Verbindungsabbruch:",
+    "lastPosition":"Position:",
+    "time":"Zeit:",
+    "lastMessage":"Letzte Nachricht:"
   },
   "ranks":{
-    "you":"Du",
+    "you":"Du:",
     "regular":"Regulär",
-    "residentdj":"Stamm DJ",
-    "bouncer":"Türsteher",
+    "residentdj":"Resident-DJ",
+    "bouncer":"Bouncer",
     "manager":"Manager",
-    "cohost":"Co-Moderator",
-    "host":"Moderator",
-    "ambassador":"Botschafter",
-    "admin":"Administrator"
+    "cohost":"Co-Host",
+    "host":"Host",
+    "ambassador":"Ambassador",
+    "admin":"Admin"
   },
   "roomSpecificSettings":{
     "infoHeader":"Dieser Raum hat besondere Einstellungen",
-    "infoHeaderCredits":"Dieser Raim hat besondere Einstellungen von %1",
-    "infoDisable":"Du kannst sie im Menu deaktivieren"
+    "infoHeaderCredits":"Dieser Raum hat besondere Einstellungen von %1",
+    "infoDisable":"Du kannst sie im Menü deaktivieren"
   },
   "menu":{
     "autowoot":"Autowoot",
     "autojoin":"Automatisch beitreten",
-    "chatlog":"ChatLog",
-    "customchatcolors":"Eigene Chat Farben",
-    "autorespond":"AFK Autoantwort",
+    "chatlog":"Chatverlauf",
+    "customchatcolors":"Eigene Chatfarben",
+    "autorespond":"AFK-Autoantwort",
     "notify":"Benachrichtigungen",
-    "afktimers":"AFK Timer",
-    "etatimer":"ETA TImer",
-    "roomsettings":"Raum Einstellungen",
-    "chatimages":"Chat-Bilder",
-    "twitchemotes":"Twitch Emotes",
+    "afktimers":"AFK-Timer",
+    "etatimer":"ETA-Timer",
+    "roomsettings":"Raumeinstellungen",
+    "chatimages":"Chatbilder",
+    "twitchemotes":"Twitch-Emotes",
     "controlpanel":"Einstellungen",
     "showdeletedmessages":"Gelöschte Nachrichten anzeigen",
     "visualizers":"RCS SoundCloud Visualizer",
-    "inlineuserinfo":"Inline User Info"
+    "inlineuserinfo":"Inline Benutzer Info"
   },
   "vote":{
     "meh":"Meh",
     "woot":"Woot",
     "grab":"Grab",
-    "undecided":"Unentschieden",
-    "djing":"spielt gerade"
+    "undecided":"Unentschlossen",
+    "djing":"Selbst am DJ-Pult"
   },
   "tooltip":{
-    "stream":"Video\/Audio Stream ein-\/ausschalten",
+    "stream":"Video/Audio-Stream ein-/ausschalten",
     "clear":"Chat leeren",
-    "afk":"AFK Nachricht",
-    "reset":"Einstellungen auf Standard zurücksetzen",
+    "afk":"AFK-Nachricht",
+    "reset":"Standardeinstellungen wiederherstellen",
     "muted":"Alle Songs sind stumm geschaltet",
     "mutedOnce":"Laufender Song ist Stumm geschaltet"
   },
   "error":{
-    "userNotFound":"Benutzer konnte nicht gefunden werden.",
+    "userNotFound":"Benutzer konnte nicht gefunden werden",
     "alreadyInWaitList":"Benutzer %1 ist bereits in der Warteliste",
     "notInWaitList":"Benutzer %1 ist nicht in der Warteliste",
-    "unknownMenuKey":"Unbekannte Menü-Taste: %1",
-    "invalidAddSyntax":"Ungültige Syntax des \"add\"-Befehls. Syntax: \/add @user",
-    "invalidBanSyntax":"Ungültige Syntax für \"ban\"-Befehl. Syntax: \/ban @user oder \/ban @Nutzer::Uhrzeit::Grund",
-    "invalidBanTime":"Die angegebene Zeit %1 ist ungültig. Gültige Zeiten sind 60, 1, 24, 1440,-1",
-    "invalidRemoveSyntax":"Ungültige Syntax für den \"remove\"-Befehl. Syntax: \/remove @Nutzer",
-    "invalidWhoisSyntax":"Ungültige Syntax für den \"whois\"-Befehl. Syntax: \/whois @Nutzer",
-    "errorGettingPlaylistInfo":"Fehler beim Laden der Playlist Informationen",
+    "unknownMenuKey":"Unbekannte Menütaste: %1",
+    "invalidAddSyntax":"Ungültige Syntax für den \"add\"-Befehl. Syntax: /add @name",
+    "invalidBanSyntax":"Ungültige Syntax für den \"ban\"-Befehl. Syntax: \"/ban @name\" oder \"/ban @name::dauer::grund\"",
+    "invalidBanTime":"Die angegebene Zeit %1 ist ungültig. Gültige Zeiten sind 60, 1, 24, 1440 und -1",
+    "invalidRemoveSyntax":"Ungültige Syntax für den \"remove\"-Befehl. Syntax: /remove @name",
+    "invalidWhoisSyntax":"Ungültige Syntax für den \"whois\"-Befehl. Syntax: /whois @nutzer",
+    "errorGettingPlaylistInfo":"Fehler beim Laden der Playlist-Informationen",
     "noPlaylistsFound":"Keine Playlists gefunden",
     "yourActivePlaylistIsFull":"Deine aktive Playlist ist voll",
-    "noNextSong":"Du hast kein Lied in der Warteschlange"
+    "noNextSong":"Du hast keinen Song in der Warteliste"
   }
 }
