--- a/src/release/langs/lang.pl.json
+++ b/src/release/langs/lang.pl.json
@@ -1,8 +1,8 @@
 {
   "running":"Plug³ wersja %1",
-  "commandsHelp":"Użyj '\/commands' aby zobaczyć rozszerzoną listę komend.",
+  "commandsHelp":"Wpisz '/commands' aby zobaczyć listę komend.",
   "autorespond":{
-    "default":"Jestem z dala od klawiatury.",
+    "default":"Nie ma mnie przy komputerze.",
     "disable":"Wyłącz automatyczne odpowiedzi AFK aby pisać",
     "nextIn":"Następna autoodpowiedź AFK zostanie wysłana za %1",
     "next":"Autoodpowiedź AFK przy następnej wzmiance",
@@ -31,17 +31,17 @@
     },
     "descriptions":{
       "join":"Dołącz do listy oczekiwania",
-      "leave":"skończ dj-kę \/ opuść listę oczekiwania",
+      "leave":"skończ dj-kę / opuść listę oczekiwania",
       "whoami":"Uzyskaj informacje o sobie",
       "mute":"wyłącz dźwięk",
       "automute":"zapamiętaj obecnie odtwarzany utwór, by automatycznie go wyciszać w przyszłości",
-      "unmute":"ustaw głośność na wartość przed wyciszeniem",
-      "nextsong":"wyświetla następny utwór w liście odtwarzania i czy ten jest w historii",
+      "unmute":"ustaw głośność na wartość sprzed wyciszenia",
+      "nextsong":"wyświetla następny utwór z listy odtwarzania oraz czy jest on w historii",
       "refresh":"odśwież film",
       "alertson":"odtwarza dźwięk, gdy określone wyrazy zostaną napisane na czacie",
       "alertsoff":"wyłącza odtwarzanie dźwięku, gdy dane słowa zostaną napisane na czacie",
       "grab":"dodaj bieżący utwór do aktywnej playlisty",
-      "badges":"pokaż\/ukryj plakietki użytkowników na czacie",
+      "badges":"pokaż/ukryj plakietki użytkowników na czacie",
       "getpos":"pokazuje aktualną pozycję na liście oczekiwania",
       "version":"pokazuje wersję",
       "commands":"pokazuje tę listę",
@@ -84,7 +84,7 @@
     "joinTime":"Jeśli dołączysz teraz do listy oczekiwania, będziesz DJ'em za około %1!"
   },
   "notify":{
-    "header":"Powiadomienia czatu",
+    "header":"Powiadomienia na czacie",
     "join":"Wejścia użytkowników",
     "leave":"Wyjścia użytkowników",
     "grab":"Graby użytkowników",
@@ -93,7 +93,7 @@
     "updates":"Następny utwór",
     "history":"Utwory w historii",
     "songUnavailable":"Utwór niedostępny",
-    "boothAlert":"Alarm konsoli (%1 \/ 50)",
+    "boothAlert":"Alarm konsoli (%1 / 50)",
     "songLength":"Długość piosenki (%1 min)",
     "message":{
       "boothAlertNext":"Za chwilę zostaniesz DJ'em!",
@@ -118,7 +118,7 @@
     "name":"Nazwa użytkownika",
     "title":"Tytuł",
     "specialTitles":{
-      "developer":"Deweloper plug&#179;",
+      "developer":"plug&#179; Developer",
       "sponsor":"plug&#179; Sponsor",
       "ambassador":"plug&#179; Ambasador",
       "donatorDiamond":"plug³ Diamentowy sponsor",
@@ -137,10 +137,10 @@
     "points":"Punkty",
     "wootCount":"Wooty:",
     "mehCount":"Mehy:",
-    "ratio":"Stosunek Woot\/Meh",
+    "ratio":"Stosunek Woot/Meh",
     "djing":"Aktualnie jest DJem",
     "notInList":"poza kolejką",
-    "inWaitlist":"%1\/%2 na liście oczekiwania",
+    "inWaitlist":"%1/%2 na liście oczekiwania",
     "userDjing":"%1 jest aktualnie DJem",
     "userNextDJ":"%1 jest następnym Dj-em",
     "disconnects":"Rozłączenia",
@@ -166,11 +166,11 @@
     "infoDisable":"Możesz je wyłączyć w menu"
   },
   "menu":{
-    "autowoot":"Autowoot",
+    "autowoot":"AutoWoot",
     "autojoin":"Automatyczne dołączanie",
-    "chatlog":"Logi czatu",
-    "customchatcolors":"Niestandardowe kolory czatu",
-    "autorespond":"Auto odpowiedź AFK",
+    "chatlog":"Historia czatu w konsoli",
+    "customchatcolors":"Niestandardowe kolory",
+    "autorespond":"Wiadomość AFK",
     "notify":"Powiadomienia",
     "afktimers":"Pokaż czas AFK na liście oczekiwania",
     "etatimer":"Przewidywany czas oczekiwania",
@@ -190,9 +190,9 @@
     "djing":"Jest teraz DJ'em"
   },
   "tooltip":{
-    "stream":"Przełącz strumień wideo\/audio",
+    "stream":"Przełącz strumień wideo/audio",
     "clear":"Wyczyść czat",
-    "afk":"Wiadomość AFK",
+    "afk":"Auto odpowiedź AFK",
     "reset":"Zresetuj do ustawień domyślnych",
     "muted":"Wszystkie utwory są wyciszone",
     "mutedOnce":"Aktualna piosenka jest wyciszona"
@@ -202,11 +202,11 @@
     "alreadyInWaitList":"Użytkownik %1 jest już na liście oczekujących",
     "notInWaitList":"Użytkownik %1 nie jest na liście oczekujących",
     "unknownMenuKey":"Nieznany klawisz menu: %1",
-    "invalidAddSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/add @user",
-    "invalidBanSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/ban @user lub \/ban @user::time::reason",
+    "invalidAddSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: /add @user",
+    "invalidBanSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: /ban @user lub /ban @user::time::reason",
     "invalidBanTime":"Nie określono czasu. %1 jest nieprawidłowy. Dostępne czasy to 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/remove @user",
-    "invalidWhoisSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/whois @user",
+    "invalidRemoveSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: /remove @user",
+    "invalidWhoisSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: /whois @user",
     "errorGettingPlaylistInfo":"Wystąpił błąd przy uzyskiwaniu informacji o liście odtwarzania",
     "noPlaylistsFound":"Nie znaleziono żadnej listy odtwarzania",
     "yourActivePlaylistIsFull":"Twoja aktywna lista odtwarzania jest pełna",
