--- a/src/release/langs/lang.sl.json
+++ b/src/release/langs/lang.sl.json
@@ -1,215 +1,215 @@
 {
-  "running":"Running plug&#179; version %1",
-  "commandsHelp":"Use '\/commands' to see expanded chat commands.",
+  "running":"Delovanje plug&#179; verzija %1",
+  "commandsHelp":"Uporabite »/ukazi« za videti razširjene ukaze klepeta.",
   "autorespond":{
-    "default":"I'm away from keyboard.",
-    "disable":"Disable AFK Autorespond to chat",
-    "nextIn":"Next AFK Autorespond will be sent from %1",
-    "next":"AFK Autorespond on next mention",
-    "commandDisable":"%1 AFK message disabled",
-    "commandNotEnabled":"%1 AFK message was not enabled"
+    "default":"Jaz sem odsoten od tipkovnice.",
+    "disable":"Onesposobi avtomatski AFK odziv v klepet",
+    "nextIn":"Naslednji AFK odziv bo poslan v %1",
+    "next":"AFK avtomatski odziv ob naslednji omembi",
+    "commandDisable":"%1 AFK sporočilo onemogočeno",
+    "commandNotEnabled":"%1 AFK sporočilo ni bilo omogočeno"
   },
   "autojoin":{
-    "commandDisable":"%1 autojoin disabled",
-    "commandNotEnabled":"%1 autojoin was not enabled"
+    "commandDisable":"%1 samodejna pridružitev onemogočena",
+    "commandNotEnabled":"%1 samodejna pridružitev ni bila omogočena"
   },
   "fullscreen":{
-    "shrink":"Shrink",
-    "enlarge":"Enlarge"
+    "shrink":"Skrči",
+    "enlarge":"Povečaj"
   },
   "commands":{
-    "header":"plug&#179; Commands",
-    "userCommands":"User Commands",
-    "modCommands":"Moderation Commands",
+    "header":"plug&#179; Ukazi",
+    "userCommands":"Ukazi uporabnikov",
+    "modCommands":"Ukazi moderiranja",
     "variables":{
-      "username":"username",
-      "word":"word",
-      "on":"on",
-      "off":"off",
-      "reason":"reason",
-      "number":"number"
+      "username":"uporabniško ime",
+      "word":"beseda",
+      "on":"vključeno",
+      "off":"izključeno",
+      "reason":"razlog",
+      "number":"številka"
     },
     "descriptions":{
-      "join":"join dj booth\/waitlist",
-      "leave":"leaves dj booth\/waitlist",
-      "whoami":"get your own information",
-      "mute":"set volume to 0",
-      "automute":"register currently playing song to automatically mute on future plays",
-      "unmute":"set volume to last volume",
-      "nextsong":"display next song in playlist and if it's in history",
-      "refresh":"refresh the video",
-      "alertson":"play sound whenever defined words are written in chat",
-      "alertsoff":"stop playing sound when defined words are written in chat",
-      "grab":"add current song to your selected playlist",
-      "badges":"show\/hide the user badges in chat",
-      "getpos":"get current waitlist position",
-      "version":"displays version number",
-      "commands":"shows this list",
-      "link":"paste link to plugCubed website in chat",
-      "whois":"gives general information about user",
-      "skip":"skip current song",
-      "ban":"kicks targeted user",
-      "lockskip":"locks DJ booth, skip and unlocks afterwards",
-      "lock":"locks DJ booth",
-      "unlock":"unlocks DJ booth",
-      "add":"adds targeted user to dj booth\/waitlist",
-      "remove":"removes targeted user from dj booth\/waitlist",
-      "whois all":"gives userid and username of all users in the room",
-      "banall":"bans all users in the room",
-      "status":"shows status of plug servers",
-      "unload":"Closes plug&#179;"
+      "join":"pridružite se na Dj mesto/čakalni seznam",
+      "leave":"zapusti Dj mesto/čakalni seznam",
+      "whoami":"pridobi svoje informacije",
+      "mute":"nastavi glasnost na 0",
+      "automute":"registriraj pesem ki se predvaja da bo samodejno utišana za naslednja igranja",
+      "unmute":"nastavi glasnost kot prejšnjič",
+      "nextsong":"prikaži naslednjo pesem v seznamu predvajanj, in če je v zgodovini",
+      "refresh":"osveži video",
+      "alertson":"predvajaj zvok, ko so določene besede napisane v klepet",
+      "alertsoff":"ustavi predvajanje zvoka, ko so določene besede napisane v klepet",
+      "grab":"dodaj trenutno skladbo na izbran seznam",
+      "badges":"pokaži/Skrij uporabnikove značke v klepetu",
+      "getpos":"pridobi trenutno pozicijo na čakalnem seznamu",
+      "version":"prikaže številko različice",
+      "commands":"prikaže ta seznam",
+      "link":"prilepite povezavo do spletne strani plugCubed v klepetu",
+      "whois":"daje splošne informacije o uporabniku",
+      "skip":"preskoči trenutno pesem",
+      "ban":"brcni izbranega uporabnika iz sobe",
+      "lockskip":"zaklene DJ mesto, preskoči in odklene potem",
+      "lock":"zaklene DJ mesto",
+      "unlock":"odklene DJ mesto",
+      "add":"doda izbranega uporabnika na dj mesto/čakalni seznam",
+      "remove":"odstrani izbranega uporabnika iz dj mesta/čakalnega seznama",
+      "whois all":"da id in uporabniško ime vseh uporabnikov v sobi",
+      "banall":"prepovej vstop u sobo vsem uporabnikom",
+      "status":"pokaži stanje plug strežnikov",
+      "unload":"Zapre plug&#179;"
     },
     "responses":{
-      "alertson":"Playing sound on the following words: %1",
-      "alertsoff":"No longer playing sound on specific words",
-      "badgeon":"Badges have been turned on",
-      "badgeoff":"Badges have been turned off",
-      "nextsong":"Your next queued song is %1 by %2",
-      "isHistory":"Warning: This song is still in the history (%1 of %2)",
+      "alertson":"Predvajanje zvok na naslednje besede: %1",
+      "alertsoff":"Ne več predvaja zvoka na določene besede",
+      "badgeon":"Značke so vidne",
+      "badgeoff":"Značke so niso vidne",
+      "nextsong":"Vaša naslednja pesem v čakalni vrsti je %1 z %2",
+      "isHistory":"Opozorilo: Ta pesem je še vedno v zgodovini (%1 %2)",
       "automute":{
-        "automuted":"%1 automuted.",
-        "registered":"%1 registered to automute on future plays.",
-        "unregistered":"%1 removed from automute registry."
+        "automuted":"%1 avtomatsko vtišan.",
+        "registered":"%1registrirano za avtomatsko utišanje za naslednja igranja.",
+        "unregistered":"%1 odstranjeno iz avtomatsko utišanega registra."
       },
       "status":{
-        "rest":"REST: %1 %2 [%3ms]",
-        "socket":"Socket: %1 %2 [%3ms]"
+        "rest":"OSTALO: %1 %2 [%3ms]",
+        "socket":"Vtičnica: %1 %2 [%3ms]"
       }
     }
   },
   "eta":{
-    "boothAvailable":"If you join the waitlist now, you would be DJing!",
-    "alreadyDJ":"You are already DJing!",
-    "waitListTime":"You are in the waitlist %1 of %2, you will be DJing in about %3!",
-    "joinTime":"If you join the waitlist now, you would be DJing in about %1!"
+    "boothAvailable":"Če se pridružite čakalnemu seznamu, boste bili DJ!",
+    "alreadyDJ":"Trenutno ste še DJ!",
+    "waitListTime":"Ste na čakalnemu seznamu %1 %2, Dj boste v %3!",
+    "joinTime":"Če se pridružite čakalnemu seznamu zdaj, boste DJ v približno %1!"
   },
   "notify":{
-    "header":"Chat Notifications",
-    "join":"User Join",
-    "leave":"User Leave",
-    "grab":"User Grab",
-    "meh":"User Mehs",
-    "stats":"Song Stats",
-    "updates":"Song Updates",
-    "history":"Songs in history",
-    "songUnavailable":"Song Unavailable",
-    "boothAlert":"Booth Alert (%1 \/ 50)",
-    "songLength":"Song Length (%1 min)",
+    "header":"Obvestila klepeta",
+    "join":"Uporabnik pridruži",
+    "leave":"Uporabnik odšel",
+    "grab":"Uporabnik shrani",
+    "meh":"Uporabnik Meha",
+    "stats":"Statistika pesmi",
+    "updates":"Posodobitve pesmi",
+    "history":"Pesem v zgodovini",
+    "songUnavailable":"Pesem ni na voljo",
+    "boothAlert":"Opozotilo Dj mesta (%1 / 50)",
+    "songLength":"Dolžina pesmi (%1 min)",
     "message":{
-      "boothAlertNext":"You are about to DJ!",
-      "boothAlertPos":"You are now %1 in the waitlist",
-      "grab":"grabbed %1 - %2",
-      "stats":"Stats: %1 woots -- %2 mehs -- %3 grabs",
-      "updates":"Now Playing: %1 by %2<br>Played by: %3",
-      "meh":"meh'd this track",
-      "join":"joined the room",
-      "leave":"left the room",
-      "history":"Song is in history (%1 of %2)",
-      "historySkipped":"Song is in history (%1 of %2), but was skipped on the last play",
-      "songLength":"Song is longer than %1 minutes",
-      "songPrivate":"Song is private",
-      "songNotFound":"Song not found",
-      "songEmbed":"Song has embedding disabled",
-      "songStreamable":"Song doesn't support streaming"
+      "boothAlertNext":"Kmalu boste DJ!",
+      "boothAlertPos":"Zdaj ste %1 na čakalnem seznamu",
+      "grab":"zgrabil %1 - %2",
+      "stats":"Statistika: %1 wooti--%2 mehi--%3 zgrabil",
+      "updates":"Trenutno predvajaš: %1 od %2 <br>Igra: %3",
+      "meh":"je meh to skladbo",
+      "join":"se je pridružil",
+      "leave":"je zapustil",
+      "history":"Pesem je v zgodovini (%1 od %2)",
+      "historySkipped":"Pesem je v zgodovini (%1 %2), vendar je bila nazadje preskočena",
+      "songLength":"Pesem je daljša kot %1 minut",
+      "songPrivate":"Pesem je zasebna",
+      "songNotFound":"Pesmi ni mogoče najti",
+      "songEmbed":"Pesem ima onemogoče reklame",
+      "songStreamable":"Pesem ne podpira videa"
     }
   },
   "info":{
-    "header":"User Information",
-    "name":"Name",
-    "title":"Title",
+    "header":"Informacije o uporabniku",
+    "name":"Ime",
+    "title":"Naslov",
     "specialTitles":{
-      "developer":"plug&#179; Developer",
-      "sponsor":"plug&#179; Sponsor",
+      "developer":"plug&#179; razvijalec",
+      "sponsor":"plug&#179; Sponzor",
       "ambassador":"plug&#179; Ambassador",
-      "donatorDiamond":"plug&#179; Diamond Donator",
-      "donatorPlatinum":"plug&#179; Platinum Donator",
-      "donatorGold":"plug&#179; Gold Donator",
-      "donatorSilver":"plug&#179; Silver Donator",
-      "donatorBronze":"plug&#179; Bronze Donator",
-      "special":"plug&#179; Special Supporter - %1"
+      "donatorDiamond":"plug&#179; Diamantni darovalec",
+      "donatorPlatinum":"plug&#179; Platinum Darovalec",
+      "donatorGold":"plug&#179; Zlat Darovalec",
+      "donatorSilver":"plug&#179; Srebrn Darovalec",
+      "donatorBronze":"plug&#179; Bronast Darovalec",
+      "special":"plug&#179; Poseben zagovornik - %1"
     },
     "id":"ID",
     "rank":"Rank",
-    "joined":"Time Joined",
+    "joined":"Čas pridružitve",
     "status":"Status",
-    "vote":"Vote",
-    "position":"Position",
-    "points":"Points",
-    "wootCount":"Woot Count",
-    "mehCount":"Meh Count",
-    "ratio":"Woot\/Meh Ratio",
-    "djing":"Currently DJing",
-    "notInList":"Not in waitlist nor booth",
-    "inWaitlist":"%1\/%2 in waitlist",
-    "userDjing":"%1 are currently DJing",
-    "userNextDJ":"%1 are DJing next",
-    "disconnects":"Disconnects",
-    "lastDisconnect":"Last Disconnect",
-    "lastPosition":"Position",
-    "time":"Time",
-    "lastMessage":"Last Message"
+    "vote":"Glasovanje",
+    "position":"Položaj",
+    "points":"Točke",
+    "wootCount":"Število Woot",
+    "mehCount":"Število Meh",
+    "ratio":"Woot/Meh razmerje",
+    "djing":"Trenutni DJ",
+    "notInList":"Ni v čakalnem seznamu in ni Dj",
+    "inWaitlist":"%1/%2 v čakalnem seznamu",
+    "userDjing":"%1 trenutno DJ-a",
+    "userNextDJ":"%1 so nasledni DJ-i",
+    "disconnects":"Prekinjene povezave",
+    "lastDisconnect":"Zadnji odklop",
+    "lastPosition":"Položaj",
+    "time":"Čas",
+    "lastMessage":"Zadnje sporočilo"
   },
   "ranks":{
-    "you":"You",
-    "regular":"Regular",
-    "residentdj":"Resident DJ",
-    "bouncer":"Bouncer",
-    "manager":"Manager",
-    "cohost":"Co-Host",
-    "host":"Host",
-    "ambassador":"Ambassador",
-    "admin":"Admin"
+    "you":"Vi",
+    "regular":"Navadno",
+    "residentdj":"Domači DJ",
+    "bouncer":"Redar",
+    "manager":"Upravljalec",
+    "cohost":"So-gostitelj",
+    "host":"Gostitelj",
+    "ambassador":"Ambasadorji",
+    "admin":"Skrbnik"
   },
   "roomSpecificSettings":{
-    "infoHeader":"This room is using special settings",
-    "infoHeaderCredits":"This room is using special settings by %1",
-    "infoDisable":"You can disable them in the menu"
+    "infoHeader":"Ta soba uporablja posebne nastavitve",
+    "infoHeaderCredits":"Ta soba uporablja posebne nastavitve od %1",
+    "infoDisable":"Lahko jih onemogočiš v meniju"
   },
   "menu":{
-    "autowoot":"Autowoot",
-    "autojoin":"Autojoin",
-    "chatlog":"ChatLog",
-    "customchatcolors":"Custom Chat Colors",
-    "autorespond":"AFK Autorespond",
-    "notify":"Notifications",
-    "afktimers":"AFK Timers",
-    "etatimer":"ETA Timer",
-    "roomsettings":"Room Settings",
-    "chatimages":"Chat Images",
-    "twitchemotes":"Twitch Emotes",
-    "controlpanel":"Control Panel",
-    "showdeletedmessages":"Show Deleted Messages",
-    "visualizers":"RCS SoundCloud Visualizers",
-    "inlineuserinfo":"Inline User Info"
+    "autowoot":"Samodejni Woot",
+    "autojoin":"Samodejna pridružitev",
+    "chatlog":"Dnevnik klepeta",
+    "customchatcolors":"Barve klepeta po meri",
+    "autorespond":"AFK Samodejen odziv",
+    "notify":"Obvestila",
+    "afktimers":"AFK Časi",
+    "etatimer":"ETA Čas",
+    "roomsettings":"Nastavitve sobe",
+    "chatimages":"Slike v klepetu",
+    "twitchemotes":"Twitch Smeški",
+    "controlpanel":"Nadzorna Plošča",
+    "showdeletedmessages":"Pokaži izbrisana sporočila",
+    "visualizers":"RCS SoundCloud Vizualizacija",
+    "inlineuserinfo":"Informacije uporabnika v vrsti"
   },
   "vote":{
     "meh":"Meh",
     "woot":"Woot",
-    "grab":"Grab",
-    "undecided":"Undecided",
-    "djing":"DJing"
+    "grab":"Shrani",
+    "undecided":"Neodločeni",
+    "djing":"DJ-a"
   },
   "tooltip":{
-    "stream":"Toggle Video\/Audio Stream",
-    "clear":"Clear Chat",
-    "afk":"AFK Message",
-    "reset":"Reset to default",
-    "muted":"All songs are muted",
-    "mutedOnce":"Current song is muted"
+    "stream":"Preklop Video/Audio Tok",
+    "clear":"Počisti klepet",
+    "afk":"AFK sporočilo",
+    "reset":"Ponastavi na privzeto",
+    "muted":"Vse pesmi so utišane",
+    "mutedOnce":"Trenutna skladba je utišana"
   },
   "error":{
-    "userNotFound":"User not found",
-    "alreadyInWaitList":"User %1 is already in waitlist",
-    "notInWaitList":"User %1 is not in waitlist",
-    "unknownMenuKey":"Unknown menu key: %1",
-    "invalidAddSyntax":"Invalid syntax for add command. Usage: \/add @user",
-    "invalidBanSyntax":"Invalid syntax for ban command. Usage: \/ban @user or \/ban @user::time::reason",
-    "invalidBanTime":"The time specified, %1 is invalid. Valid times are 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Invalid syntax for remove command. Usage: \/remove @user",
-    "invalidWhoisSyntax":"Invalid syntax for whois command. Usage: \/whois @user",
-    "errorGettingPlaylistInfo":"Error getting playlist info",
-    "noPlaylistsFound":"No playlists found",
-    "yourActivePlaylistIsFull":"Your active playlist is full",
-    "noNextSong":"You have no queued song"
+    "userNotFound":"Uporabnika ni bilo mogoče najti",
+    "alreadyInWaitList":"Uporabnik %1 je že v čakalnem seznamu",
+    "notInWaitList":"Uporabnik %1 ni v čakalnem seznamu",
+    "unknownMenuKey":"Neznan menu ključ: %1",
+    "invalidAddSyntax":"Napačen unos za ukaz dodajanja. Uporaba: /add @user",
+    "invalidBanSyntax":"Napačen unos za prepovedni ukaz. Uporabi: /ban @user ali /ban @user::time::razlog",
+    "invalidBanTime":"Določen čas, %1 ni veljaven. Veljavni časi so 60, 1, 24, 1440, -1",
+    "invalidRemoveSyntax":"Napačen unos za odstranitveni ukaz. Uporabi: /remove @user",
+    "invalidWhoisSyntax":"Napačen unos za kdo je ukaz. Uporaba: /whois @user",
+    "errorGettingPlaylistInfo":"Napaka pri pridobivanju informacij seznama predvajanja",
+    "noPlaylistsFound":"Ni seznamov predvajanj",
+    "yourActivePlaylistIsFull":"Tvoj aktivni seznam predvajanja je poln",
+    "noNextSong":"Nimate pesni v čakalni vrsti"
   }
 }
