--- a/src/release/langs/lang.sr.json
+++ b/src/release/langs/lang.sr.json
@@ -1,9 +1,9 @@
 {
   "running":"Pokrećeš plug plug&#179; verzija %1",
-  "commandsHelp":"Koristi ' \/commands' da vidiš komande.",
+  "commandsHelp":"Koristi ' /commands' da vidiš komande.",
   "autorespond":{
     "default":"Nisam za kompjuterom.",
-    "disable":"Isključi automatsko odgovaranje na četu",
+    "disable":"Isključi automatsko odgovaranje u četu",
     "nextIn":"Sledeća automaska poruka biće u %1",
     "next":"Automatska poruka biće na sledećem tagu",
     "commandDisable":"%1 automatsko pridruživanje je isključeno",
@@ -41,7 +41,7 @@
       "alertson":"pusti zvuk kada se definisane reči pomenu u chatu",
       "alertsoff":"isključi zvuk kada se definisane reči pomenu u chatu",
       "grab":"Dodaj trenutnu pesmu u tvoju izabranu playlist-u",
-      "badges":"Pokaži\/Sakrij korisničke bedževe u čet-u",
+      "badges":"Pokaži/Sakrij korisničke bedževe u čet-u",
       "getpos":"Trenutna pozicija na listi čekanja",
       "version":"Prikaži broj verzije",
       "commands":"prikazuje ovu listu",
@@ -93,17 +93,17 @@
     "updates":"Ažuriranja Pesme",
     "history":"Pesma u istoriji",
     "songUnavailable":"Pesma Nedostupna",
-    "boothAlert":"Booth Alert (%1 \/ 50)",
-    "songLength":"Dužina pesme (%1 minut\/a)",
+    "boothAlert":"Booth Alert (%1 / 50)",
+    "songLength":"Dužina pesme (%1 minut/a)",
     "message":{
       "boothAlertNext":"You are about to DJ!",
-      "boothAlertPos":"You are now %1 in the waitlist",
+      "boothAlertPos":"Ti si sada %1 u listi čekanja",
       "grab":"Grab-ovano %1 - %2",
       "stats":"Statistika: %1 Woot -- %2 Meh -- %3 Grab",
-      "updates":"Trenutna pesma: %1 od %2<br \/>Pustio: %3",
+      "updates":"Trenutna pesma: %1 od %2<br />Pustio: %3",
       "meh":"Meh-ovao ovu pesmu",
-      "join":"Ušao\/la u sobu",
-      "leave":"Napustio\/la sobu",
+      "join":"Ušao/la u sobu",
+      "leave":"Napustio/la sobu",
       "history":"Pesma je u istoriji (%1 od %2)",
       "historySkipped":"Pesma je u istoriji (%1 od %2),ali je bila skipovana",
       "songLength":"Pesma je duža od %1 minuta",
@@ -137,10 +137,10 @@
     "points":"Poena",
     "wootCount":"Broj sviđanja",
     "mehCount":"Broj Mehova",
-    "ratio":"Odnos Woot\/Meh",
+    "ratio":"Odnos Woot/Meh",
     "djing":"je DJ",
     "notInList":"Nisi u DJ listi",
-    "inWaitlist":"%1\/%2 na listi",
+    "inWaitlist":"%1/%2 na listi",
     "userDjing":"%1 je trenutno DJ",
     "userNextDJ":"%1 je sledeći DJ",
     "disconnects":"Isključenja",
@@ -190,7 +190,7 @@
     "djing":"je DJ"
   },
   "tooltip":{
-    "stream":"Uključi Audio\/Video",
+    "stream":"Uključi Audio/Video",
     "clear":"Očisti čet",
     "afk":"AFK poruka",
     "reset":"Vrati na podrazumevano",
@@ -199,17 +199,17 @@
   },
   "error":{
     "userNotFound":"Korisnik nije pronađen",
-    "alreadyInWaitList":"Korisnik %1 je već u Listi Čekanja",
+    "alreadyInWaitList":"Korisnik %1 je već u listi čekanja",
     "notInWaitList":"%1 korisnik nije u Listi Čekanja",
     "unknownMenuKey":"Nepoznata komanda: %1",
-    "invalidAddSyntax":"Nevažeća sintaksa za dodavanje komande. Upotreba: \/add @user",
-    "invalidBanSyntax":"Nevažeća sintaksa za Ban komandu. Upotreba: \/zabrani @user ili \/ban @user::time::reason",
+    "invalidAddSyntax":"Nevažeća sintaksa za dodavanje komande. Upotreba: /add @user",
+    "invalidBanSyntax":"Nevažeća sintaksa za Ban komandu. Upotreba: /zabrani @user ili /ban @user::time::reason",
     "invalidBanTime":"Navedeni vremenski interval %1 je nevažeći. Važeća vremena su 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Nevažeća sintaksa za uklanjanje komande. Upotreba: \/remove @user",
-    "invalidWhoisSyntax":"Nevažeća sintaksa za \"ko je\" komandu. Upotreba: \/whois @user",
-    "errorGettingPlaylistInfo":"Greška pri dobijanju informacije o playlist-i",
-    "noPlaylistsFound":"PlayList-a nije pronađena",
-    "yourActivePlaylistIsFull":"Tvoja aktivirana PlayList-a je puna",
+    "invalidRemoveSyntax":"Nevažeća sintaksa za uklanjanje komande. Upotreba: /remove @user",
+    "invalidWhoisSyntax":"Nevažeća sintaksa za \"ko je\" komandu. Upotreba: /whois @user",
+    "errorGettingPlaylistInfo":"Greška pri dobijanju informacije o play listi",
+    "noPlaylistsFound":"Play lista nije pronađena",
+    "yourActivePlaylistIsFull":"Tvoja aktivirana Play lista je puna",
     "noNextSong":"Nemaš pesmu na čekanju"
   }
 }
